- Valley.getElevationLeftOfHeadwall does lookup and interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images


DONE:
9/8/08 - add englishUnits arg to constructors for coordinates feature
9/8/08 - simplify i18n for units, to accommodate switching between English and metric
******* 1.00.02 (24258)
9/8/08 - bugfix: snowfall gradient doesn't draw properly and crashes on Mac OS 10.4 (see Unfuddle #553)
9/8/08 - update snowfall shape based on bounds of both birds-eye and zoomed viewports, so that sky doesn't above snow in zoomed view on large monitors
9/8/08 - simplify shape of snowfall, don't use constructive area geometry
9/4/08 - implement Save/Load feature
9/4/08 - replace "glacier picture" check box with a button (icon on button, to left of steady state button)
9/4/08 - strip chart implementation for "ELA versus time" chart
9/4/08 - show both ablation (solid green) & negative ablation (dashed green) on "glacial budget vs elevation" chart
9/4/08 - revert change to names of time-based graphs made on 8/28/08
8/28/08 - rename time-based graph classes and labels, should be "time vs ...", not "... vs time"
8/28/08 - make "glacier length vs time" graph a strip chart that keeps 1000 years worth of data
8/28/08 - draw valley floor for x<0 using Java 2D, to clean up snow/valley interface
******* 1.00.01 (23914)
8/26/08 - tweak MountainsAndValleyNode alignment to match new background image
8/26/08 - fix: valley is narrower near headwall in background image (new image file, still not exact, but close enough)
8/21/08 - fix "glacier budget vs elevation" chart so that SHOW_NEGATIVE_ABLATION flag works properly
******* 1.00.00 (23465)
7/23/08 - update screenshot
7/23/08 - add sim description (aka, abstract)