@@ -66,14 +66,6 @@ public class Thermometer extends AbstractTool {
     }
     
     //----------------------------------------------------------------------------
-    // Utilities
-    //----------------------------------------------------------------------------
-    
-    public static double celsiusToFahrenheit( double celsius ) {
-        return ( (9./5.) * celsius ) + 32.;
-    }
-    
-    //----------------------------------------------------------------------------
     // AbstractTool overrides
     //----------------------------------------------------------------------------
     
